Forum page included

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ GitHub is a service provided by GitHub, owned by Microsoft.</p>
         </ul>
      </p>
      <iframe width="700" height="300" src="https://www.youtube.com/embed/8JJ101D3knE" title="Git Tutorial for Beginners: Learn Git in 1 Hour" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls></iframe>
-
+    <br>
+    <p>
+     <a href="forum.html">To contribute to this webpage - Click Me!!</a>
+     </p>
 </body>
 </html>
