Forum Page Modified

--- a/forum.html
+++ b/forum.html
@@ -34,7 +34,34 @@
             <td>Naresh</td>
             <td>Git Commands - Newuser, remote add,push,pull</td>
         </tr>
-
     </table>
+    <form action=""><h1>We Value Your Contribution</h1>
+        <input type="text" placeholder="Enter your name" id="" name="" required><br><br>
+        <input type="datetime-local" name="" id="" required><br>
+        <label for=""><h4>Gender</h4></label>
+        <input type="radio" name="gr" id="" required>
+        <label for="">Male</label>
+        <input type="radio" name="gr" id="">
+        <label for="">Female</label>
+        <input type="radio" name="gr" id="">
+        <label for="">Prefer Not to say</label>
+        <label for=""><h4>Checking before submission</h4></label>
+        <input type="checkbox" name="cb" id="" required>
+        <label for="">Read the Document</label><br>
+        <input type="checkbox" name="cb" id="">
+        <label for="">No repeated Commands</label><br>
+        <input type="checkbox" name="cb" id="">
+        <label for="">Verified that the definition provided is correct</label><br>
+        <label for=""><h4>Description Type</h4></label>
+        <select name="" id="">
+            <option value="New Definition">New Definition</option>
+            <option value="New Command">New Command</option>
+            <option value="New Features">New Features</option>
+            <option value="Others..">Others..</option>
+        </select><br>
+        <label for=""><h4>Description</h4></label>
+        <input type="text" minlength="10" maxlength="100" required><br><br>
+        <button type="Submit">Submit</button>
+    </form>
 </body>
 </html>
